--- a/index.html
+++ b/index.html
@@ -671,7 +671,7 @@
                             <canvas id="julyAvgViewsPerClipChart"></canvas>
                         </div>
 
-                        <h3 class="text-xl font-semibold text-slate-900 mb-4 text-center">Total Likes by Title</h3>
+                        <h3 class="text-xl font-semibold text-slate-900 mb-4 text-center">Total Watched clicke by Title</h3>
                         <div class="chart-container">
                             <canvas id="julyLikesChart"></canvas>
                         </div>
