--- a/index1.html
+++ b/index1.html
@@ -229,16 +229,18 @@
                             <th class="px-6 py-3 text-right text-xs font-medium text-gray-500 uppercase tracking-wider">Clips</th>
                             <th class="px-6 py-3 text-right text-xs font-medium text-gray-500 uppercase tracking-wider">Views</th>
                             <th class="px-6 py-3 text-right text-xs font-medium text-gray-500 uppercase tracking-wider">Watched Clicks</th>
+                            <th class="px-6 py-3 text-right text-xs font-medium text-gray-500 uppercase tracking-wider">AVG Views</th>
                         </tr>
                     </thead>
                     <tbody class="bg-white divide-y divide-gray-200">
-                        <!-- Updated data for the bottom 10 profiles -->
+                        <!-- Updated data for the bottom 10 profiles with AVG Views-->
                         <tr>
                             <td class="px-6 py-4 whitespace-nowrap font-medium text-gray-900">1</td>
                             <td class="px-6 py-4 whitespace-nowrap text-gray-500">Ragel We Set Settat Season 1</td>
                             <td class="px-6 py-4 whitespace-nowrap text-gray-500 text-right">30</td>
                             <td class="px-6 py-4 whitespace-nowrap text-gray-500 text-right">13,708</td>
                             <td class="px-6 py-4 whitespace-nowrap text-gray-500 text-right">154</td>
+                            <td class="px-6 py-4 whitespace-nowrap text-gray-500 text-right">457</td>
                         </tr>
                         <tr>
                             <td class="px-6 py-4 whitespace-nowrap font-medium text-gray-900">2</td>
@@ -246,6 +248,7 @@
                             <td class="px-6 py-4 whitespace-nowrap text-gray-500 text-right">32</td>
                             <td class="px-6 py-4 whitespace-nowrap text-gray-500 text-right">13,158</td>
                             <td class="px-6 py-4 whitespace-nowrap text-gray-500 text-right">82</td>
+                            <td class="px-6 py-4 whitespace-nowrap text-gray-500 text-right">411</td>
                         </tr>
                         <tr>
                             <td class="px-6 py-4 whitespace-nowrap font-medium text-gray-900">3</td>
@@ -253,6 +256,7 @@
                             <td class="px-6 py-4 whitespace-nowrap text-gray-500 text-right">5</td>
                             <td class="px-6 py-4 whitespace-nowrap text-gray-500 text-right">11,421</td>
                             <td class="px-6 py-4 whitespace-nowrap text-gray-500 text-right">118</td>
+                            <td class="px-6 py-4 whitespace-nowrap text-gray-500 text-right">2,284</td>
                         </tr>
                         <tr>
                             <td class="px-6 py-4 whitespace-nowrap font-medium text-gray-900">4</td>
@@ -260,6 +264,7 @@
                             <td class="px-6 py-4 whitespace-nowrap text-gray-500 text-right">13</td>
                             <td class="px-6 py-4 whitespace-nowrap text-gray-500 text-right">11,400</td>
                             <td class="px-6 py-4 whitespace-nowrap text-gray-500 text-right">113</td>
+                            <td class="px-6 py-4 whitespace-nowrap text-gray-500 text-right">877</td>
                         </tr>
                         <tr>
                             <td class="px-6 py-4 whitespace-nowrap font-medium text-gray-900">5</td>
@@ -267,6 +272,7 @@
                             <td class="px-6 py-4 whitespace-nowrap text-gray-500 text-right">12</td>
                             <td class="px-6 py-4 whitespace-nowrap text-gray-500 text-right">9,590</td>
                             <td class="px-6 py-4 whitespace-nowrap text-gray-500 text-right">94</td>
+                            <td class="px-6 py-4 whitespace-nowrap text-gray-500 text-right">799</td>
                         </tr>
                         <tr>
                             <td class="px-6 py-4 whitespace-nowrap font-medium text-gray-900">6</td>
@@ -274,6 +280,7 @@
                             <td class="px-6 py-4 whitespace-nowrap text-gray-500 text-right">5</td>
                             <td class="px-6 py-4 whitespace-nowrap text-gray-500 text-right">4,657</td>
                             <td class="px-6 py-4 whitespace-nowrap text-gray-500 text-right">64</td>
+                            <td class="px-6 py-4 whitespace-nowrap text-gray-500 text-right">931</td>
                         </tr>
                         <tr>
                             <td class="px-6 py-4 whitespace-nowrap font-medium text-gray-900">7</td>
@@ -281,6 +288,7 @@
                             <td class="px-6 py-4 whitespace-nowrap text-gray-500 text-right">5</td>
                             <td class="px-6 py-4 whitespace-nowrap text-gray-500 text-right">2,992</td>
                             <td class="px-6 py-4 whitespace-nowrap text-gray-500 text-right">11</td>
+                            <td class="px-6 py-4 whitespace-nowrap text-gray-500 text-right">598</td>
                         </tr>
                         <tr>
                             <td class="px-6 py-4 whitespace-nowrap font-medium text-gray-900">8</td>
@@ -288,6 +296,7 @@
                             <td class="px-6 py-4 whitespace-nowrap text-gray-500 text-right">16</td>
                             <td class="px-6 py-4 whitespace-nowrap text-gray-500 text-right">2,108</td>
                             <td class="px-6 py-4 whitespace-nowrap text-gray-500 text-right">14</td>
+                            <td class="px-6 py-4 whitespace-nowrap text-gray-500 text-right">132</td>
                         </tr>
                         <tr>
                             <td class="px-6 py-4 whitespace-nowrap font-medium text-gray-900">9</td>
@@ -295,6 +304,7 @@
                             <td class="px-6 py-4 whitespace-nowrap text-gray-500 text-right">3</td>
                             <td class="px-6 py-4 whitespace-nowrap text-gray-500 text-right">1,805</td>
                             <td class="px-6 py-4 whitespace-nowrap text-gray-500 text-right">48</td>
+                            <td class="px-6 py-4 whitespace-nowrap text-gray-500 text-right">602</td>
                         </tr>
                         <tr>
                             <td class="px-6 py-4 whitespace-nowrap font-medium text-gray-900">10</td>
@@ -302,6 +312,7 @@
                             <td class="px-6 py-4 whitespace-nowrap text-gray-500 text-right">3</td>
                             <td class="px-6 py-4 whitespace-nowrap text-gray-500 text-right">542</td>
                             <td class="px-6 py-4 whitespace-nowrap text-gray-500 text-right">7</td>
+                            <td class="px-6 py-4 whitespace-nowrap text-gray-500 text-right">181</td>
                         </tr>
                     </tbody>
                 </table>
@@ -511,7 +522,7 @@
                         <tr>
                             <td class="px-6 py-4 whitespace-nowrap font-medium text-gray-900">19</td>
                             <td class="px-6 py-4 whitespace-nowrap text-gray-500">Haq Arab Season 1</td>
-                            <td class="px-6 py-4 whitespace-nowrap text-gray-500">دجال ولى شيخ؟</td>
+                            <td class="px-6 py-4 whitespace-nowrap text-gray-500 text-right">دجال ولى شيخ؟</td>
                             <td class="px-6 py-4 whitespace-nowrap text-gray-500 text-right">48,845</td>
                             <td class="px-6 py-4 whitespace-nowrap text-gray-500 text-right">70</td>
                             <td class="px-6 py-4 whitespace-nowrap text-gray-500 text-right">350</td>
